doc/0.60/_sources/reference/get-ad.txt
.. index:: GET /ad
.. _ISO 8601: http://en.wikipedia.org/wiki/ISO_8601
.. _get_ad:

GET /ad
=======

:ref:`get_ad_v3` | :ref:`get_ad_v2` | :ref:`get_ad_v1`


.. _get_ad_v3:

GET /ad v3
----------

**Required Scope:** ``api_ro`` or ``console_ro``

This URL returns a list of ads for the current user and the total size of the
result set matching the filter criteria. To use it set the ``Accept`` header
to ``application/sellside.ad.list-v3+json``.

.. warning::

	This call is only compatible with :ref:`categories_v2` and must only
	be used with the other :ref:`categories_v2_compatible_endpoints`. Otherwise,
	the attributes may not be recognized or editable.

The number of ads returned can be limited with the ``limit`` parameter.
The ``offset`` parameter allows to skip some ads and together with ``limit``
allows for pagination.

The ``status`` parameter returns only ads with the given status. The default
is to return only ads with status **ACTIVE**.

The ``orderBy`` and ``direction`` parameters control the sort field and
direction.

The ``titleKeywords`` parameter is case-insensitive and will include only ads
which contain the given keyword in their title.

The ``changedSince`` parameter can be used to retrieve only ads that have
:ref:`ad_dateLastUpdated` >= ``changedSince``. The ``changedSince`` value must be a
valid `ISO 8601`_ UTC date which usually lies in the past but cannot lie in
the future.

The ``changedSince`` parameter should only be combined with ``limit`` and
``offset``. Filtering by ``status`` and ``titleKeyword`` may be used but
``orderBy`` and ``direction`` cannot be changed since this would break the
pagination.

The ``remainingBudget`` parameter can be used to retrieve only ads whose remaining
budget (:ref:`ad_totalBudget` - :ref:`ad_spentBudget`) is below a given threshold.
The ``remainingBudget`` value must be an absolute integer number (e.g. **123**) or a
percentage (e.g. **10%**).

The ``startDate`` and ``endDate`` parameters can be used to define a period. The
values for both should be valid dates represented as 'yyyy-MM-dd', and the ``endDate``
should represent a date equal or after the ``startDate``. The ads returned have had
activity in this period. Note that ads which were live during this period but did
not recieve a single click, impression or urlClick, and did not have any updates
in this period, will be filtered out.

.. note::

    The fields :ref:`ad_pageNumber` and :ref:`ad_suggestedCpcForPageOne` are
    currently expensive to compute. If you do not need their values consider
    excluding them to speed up the response. To exclude the fields add the
    following parameter to the request URL. ::

        ?_exclude=pageNumber,suggestedCpcForPageOne

Caching all ads for a user
--------------------------

If an application needs to keep a cache of the entire set of ads for a user
then it should perform the following steps:

1. Fetch all ads by using ``limit`` and ``offset`` until all
ads have been retrieved. No filters should be used.

2. Retrieve updates by using ``changedSince``, ``limit`` and ``offset``. No
additional filters should be used. ``changedSince`` should be set to a value a
somewhat before (e.g. 1 min) of ``dateLastUpdated`` of the last modified ad.

Due to the nature of this system retrieving updates as described in step 2
will always return at least the ad that was modified last. Also, the API can
currently not guarantee that all updates are retrieved when ``changedSince``
is set to ``dateLastUpdated`` of the last modified ad. That's why you should
use ``dateLastUpdated`` - 1 minute. To determine whether an ad has changed
compare the ``dateLastUpdated`` value.

Unless you have a very small set of ads (< 10) do not retrieve all ads every
time since this will not give you decent performance and also puts unnecessary
load on the system.

Example
-------

.. include:: ../examples/get-ad-v3-example.rst

.. _get_ad_v2:

GET /ad v2
----------

**Required Scope:** ``api_ro`` or ``console_ro``

Version 2 works just like :ref:`get_ad_v3` except that it is only compatible with
:ref:`categories_v1`. To use it set the ``Accept`` header to
``application/sellside.ad.list-v2+json``.

.. warning::

	This call is deprecated and will be removed after September 2015.  It is
	only compatible with :ref:`categories_v1` and must only be used with the
	other :ref:`categories_v1_compatible_endpoints`. Otherwise, the attributes
	may not be recognized or editable.

Example
-------

.. include:: ../examples/get-ad-v2-example.rst

.. _get_ad_v1:

GET /ad v1
----------

**Required Scope:** ``api_ro`` or ``console_ro``

Version 1 of this URL returns returns a list of ads. To use it set the
``Accept`` header to ``application/sellside.ad.list-v1+json``.

.. warning::

	This call is deprecated and will be removed after September 2015.  It is
	only compatible with :ref:`categories_v1` and must only be used with the
	other :ref:`categories_v1_compatible_endpoints`. Otherwise, the attributes
	may not be recognized or editable.

Parameters
~~~~~~~~~~

===============  ========    ============================================================================
Name             Type        Description
===============  ========    ============================================================================
limit            int         Limits the number of records returned. Default **and** maximum is 100.
offset           int         Skips the first N records.
titleKeywords    string      Case-insensitive filter for a keyword in the title.
status           string      Filters the result set by the ad status. Should be a comma separated list of [ACTIVE, PAUSED, DELETED, DELETED_BY_CS, SUSPENDED_BY_CS, BUDGET_REACHED, DAILY_BUDGET_REACHED]. Default value is ACTIVE.
orderBy          string      Orders the result set by the given field. Should be one of [DATE_CREATED, DATE_LAST_UPDATED]. Default value is DATE_CREATED.
direction        string      Determines the direction of the sort. Should be one of [ASCENDING, DESCENDING]. Default is ASCENDING.
changedSince     date        Returns ads which have ``changedSince`` >= ``dateLastUpdated``.
remainingBudget  string      Returns ads whose remaining budget is below a certain value (absolute number or a percentage).
startDate        string      Determines the startDate of the period to select ads with activity for.
endDate          string      Determines the endDate of the period to select ads with activity for.
_include         string      Comma-separated-list of fields to include. Optional, default is all fields.
_exclude         string      Comma-separated-list of fields to omit. Optional, default empty.
===============  ========    ============================================================================

Errors
~~~~~~

====================    ====    =======================     ==============================================================================
Field                   Code    Error message               Description
====================    ====    =======================     ==============================================================================
limit                   2001    invalid argument            not a valid number
limit                   2002    out of range                less than 1 or greater than 100.
offset                  2001    invalid argument            not a valid number
offset                  2002    out of range                less than 0.
titleKeywords           2004    value too short             must be 3 characters or more.
status                  2001    invalid argument            not a recognised status to filter on
orderBy                 2001    invalid argument            not a recognised orderBy to filter on
orderBy                 2013    invalid state               cannot be used in combination with changedSince
direction               2001    invalid argument            not a recognised direction to filter on
direction               2013    invalid state               cannot be used in combination with changedSince
changedSince            2001    invalid argument            not a valid date
changedSince            2002    out of range                date is in the future
remainingBudget         2001    invalid argument            remaining budget is not an integer or an integer percentage (e.g. **10%**)
startDate               2001    invalid argument            startDate should be a valid date in form 'yyyy-MM-dd'
endDate                 2001    invalid argument            endDate should be a valid date in form 'yyyy-MM-dd'
startDate/endDate       2002    out of range                endDate should be equal or after startDate
====================    ====    =======================     ==============================================================================

Example
~~~~~~~

.. include:: ../examples/get-ad-v1-example.rst
